src/objects/My_Team__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Birthday__c</fullName>
        <formula>IF(  MONTH( Birthday__c ) &lt;  MONTH( TODAY() )   ,  DATE( YEAR( TODAY() )+1 , MONTH(Birthday__c) , DAY(Birthday__c) ) ,  IF(MONTH( Birthday__c ) &gt;  MONTH( TODAY() ), DATE( YEAR( TODAY() ) , MONTH(Birthday__c) , DAY(Birthday__c) ),  IF(DAY(Birthday__c) &gt;= DAY(TODAY()), DATE( YEAR( TODAY() ) , MONTH(Birthday__c) , DAY(Birthday__c) ),  DATE( YEAR( TODAY() )+1 , MONTH(Birthday__c) , DAY(Birthday__c) )) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <label>Team Member Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>My Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Next_Birthday__c</columns>
        <columns>Email__c</columns>
        <columns>Gender__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>